# sillypaste

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  crontab  db.sqlite3  docker-compose.yml  fly.toml  manage.py  notes.org  projects.toml  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: build.yml
api/: mixins.py  permissions.py  routers.py  serializers.py  urls.py  views.py
api/fixtures/: user_janedoe.json
core/: admin.py  models.py  validators.py
core/lazysignup/: convert.py  decorators.py
core/migrations/: 0001_initial.py  0002_paste_expiry.py  0003_paste_hits.py  0004_auto_20200904_1501.py  0005_expirylog.py  0006_paste_size.py  0007_auto_20200905_1530.py  0007_paste_author.py  0008_auto_20200908_1618.py  0009_auto_20200910_0350.py  0010_paste_freeze_hits.py  0011_auto_20201105_0203.py  0012_auto_20210813_0035.py
core/models/: models.py  tests.py
core/permissions/: permissions.py
core/validators/: tests.py  validators.py
docker-entrypoint-initdb.d/: init-sillypaste.sql
sillypaste/: __main__.py  apps.py  manage.py  models.py  settings.py  urls.py  views.py  wsgi.py
sillypaste/api/: apps.py  mixins.py  serializers.py  views.py
sillypaste/cfg/: apps.py  settings.py  urls.py  wsgi.py
sillypaste/core/: admin.py  apps.py
sillypaste/migrations/: 0001_initial.py
sillypaste/web/: apps.py  urls.py
web/: forms.py  lazysignup_convert.py  lazysignup_decorators.py  urls.py  views.py
web/forms/: forms.py  tests.py
web/migrations/: 0001_initial.py  (+1 more)
(+86 files in other folders)
